<resources>
    <string name="app_name">Netcore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sale_order_list">Sale Order list</string>
    <string name="menu_new_sale_order">Create Sale Order</string>
    <string name="menu_customer">Customer List</string>
    <string name="menu_installation">Installation List</string>
    <string name="menu_billing">Billing</string>
    <string name="menu_invoicing">Invoicing</string>
    <string name="menu_sacout">Sacout</string>
    <string name="menu_promotion">Promotion</string>
    <string name="menu_logout">Logout</string>

    <string name="title">Title</string>
    <string name="billing_title">Billing Title</string>
    <string name="billing_no">Billing No</string>
    <string name="billing_for">BillingFor</string>
    <string name="status">Status</string>
    <string name="billing_date">Billing Date</string>
    <string name="bill_type">Bill Type</string>
    <string name="repeat_type">Repeat Type</string>
    <string name="end_date">End Date</string>
    <string name="sale_order">Sale Order</string>
    <string name="company">Company</string>
    <string name="contact_info">Contact Info</string>
    <string name="about_billing">About Billing</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="remainder_one">Remainder one</string>
    <string name="remainder_two">Remainder two</string>
    <string name="next_bill_date">Next Bill Date</string>
    <string name="next_target_bill_date">Next Target Bill Date</string>
    <string name="important_level">Important Level</string>
    <string name="reminder_important_level">Reminder Important Level</string>
    <string name="reminder_email">Reminder Email</string>
    <string name="lae_policy">Late Policy</string>
    <string name="enter_lae_policy">Enter Late Policy</string>
    <string name="notify_user_1">Notify User1</string>
    <string name="notify_user_2">Notify User2</string>


    <string name="day">ရက်</string>
    <string name="month">လ</string>
    <string name="year">နှစ်</string>
    <string name="date">နေ့စွဲ</string>
    <string name="scout_no">စကောက်နံပါတ်</string>
    <string name="total_count">စာရင်းစုစုပေါင်း</string>
    <string name="create_new_scout">စာရင်းအသစ်ထည့်ရန်</string>
    <string name="search_data_no_exist">သင်ရှာလိုသောအချက်အလက်မတွေ့ပါ!</string>
    <string name="upload_data">အချက်အလက်များကိုရုံးချုပ်သို့တင်မည်</string>
    <string name="no_data_title">No Data</string>
    <string name="no_data_message">Dataများ မရယူရသေးပါ!</string>
    <string name="get_data">Data ယူမယ်</string>
    <string name="dont_get_data">မယူဘူး</string>
    <string name="error_no_data">စာရင်းများမထည့်ရသေးပါ\n (+)ပုံ ကိုနှိပ်ပြီးထည့်နိုင်ပါသည်</string>
    <string name="company_name">လုပ်ငန်း အမည်</string>
    <string name="contact_person_name">အမည် (ဆက်သွယ်ရန်ပုဂ္ဂိုလ်)</string>
    <string name="contact_person_info">အချက်အလက် (ဆက်သွယ်ရန်ပုဂ္ဂိုလ်)</string>
    <string name="address">လိပ်စာ</string>
    <string name="remark">မှတ်ချက်</string>
    <string name="lat">လတ္တီတွဒ်</string>
    <string name="lng">လောင်ဂျီတွဒ်</string>
    <string name="phone">ဖုန်း</string>
    <string name="login">ဝင်မည်</string>
    <string name="type">အမျိုးအစား</string>
    <string name="city">မြို့</string>
    <string name="township">မြို့နယ်</string>
    <string name="get_picture">ဓာတ်ပုံရယူရန်</string>
    <string name="get_location">တည်နေရာ ရယူရန်္</string>
    <string name="delete">ဖျက်ရန်</string>
    <string name="ok">ok</string>
    <string name="save">Save</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_data_to_upload">There is no data to upload.</string>
    <string name="upload_complete">Upload completed.</string>
    <string name="upload_fail">Upload data failed.</string>

    <string-array name="city_test_list">
        <item>Yangon</item>
        <item>Mandalay</item>
        <item>Taunggyi</item>
        <item>Thanlyin</item>
        <item>Naypyitaw</item>
        <item>Magwe</item>
        <item>Bagan</item>
    </string-array>

    <string-array name="township_test_list">
        <item>Latha</item>
        <item>Kyeemyindaing</item>
        <item>Ahlone</item>
        <item>Sanchaung</item>
        <item>Hlaing</item>
        <item>Insein</item>
        <item>Oakalar(South)</item>
    </string-array>

    <string-array name="scout_type_test_list">
        <item>Hotel</item>
        <item>Apartment</item>
        <item>School</item>
        <item>Monastery</item>
        <item>Business Tower</item>
        <item>Condo</item>
        <item>Restaurant</item>
    </string-array>

    <string-array name="status_arr">
        <item>New</item>
        <item>Success</item>
        <item>Cancel</item>
        <item>Pending</item>
        <item>Confirmed</item>
    </string-array>

    <string name="poor_connection">Please check your internet connection!</string>
</resources>
